:in-range and :out-of-range CSS selectors should check 'have range limitations.'

Spec.: https://html.spec.whatwg.org/multipage/scripting.html#selector-in-range

These CSS selectors should work only if |min| or |max| attribute has a valid value
except for input[type=range] which has default minimum/maximum values.

BUG=603268

Review-Url: https://codereview.chromium.org/2033323002
Cr-Commit-Position: refs/heads/master@{#397654}

Former-commit-id: a543e0c81913215edafb3337ec88c815ddde8c35